@@ -63,6 +63,8 @@ Version 0.7.5 UNRELEASED
 
   * Add function to get the Origin of a package version
 
+  * Add function to get the candidate version of a package
+
 - Documentation:
 
   * manpage:
